# sudokuku

./: .gitignore  LICENSE  README.md  __sudokumanager.py  main.py  requirements-dev.txt  setup.cfg  setup.py  sudokumanager.py
.github/workflows/: main.yml
examples/: console_example.py
src/: sudokuku.py  sudokuwrapped.py
src/sudokuku/: manager.py
sudokuku/: coordinate_calculator.py  field_state.py  field_status.py  manager.py  sudoku_handler.py  sudokuwrapped.py
sudokuku/utils/: coordinate_calculator.py
tests/: test_block_field.py  test_block_fields_definitely_blocked_by_possible_numbers.py  test_determine_coordinates_of_fields_definitely_blocked_by_possible_numbers.py  test_determine_fields_and_numbers_blocked_by_possible_numbers.py  test_field_state.py  test_field_status.py  test_get_coordinates_with_possible_number_in_quadrant.py  test_remove_numbers_from_possible_position.py  test_sudoku_handler.py  test_sudokupositions.py
tests/integration/: test_fields_occupied_by_optional_numbers.py  test_prepare_sudoku_with_prepare_sudoku.py
