[metadata]
name = sudokuku
version = 0.2.1
author = Jonas Strube
description = A package for solving sudokus
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jonasstrube/sudokuku
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src